syntax = "proto3";

package account.v1alpha;

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (AccountResponse) {}
  rpc UpdateAccount(UpdateAccountRequest) returns (AccountResponse) {}
  rpc FindAccountByLabel(GetAccountRequest) returns (AccountResponse) {}
  rpc FindAllAccounts(EmptyRequest) returns (AccountResponse) {}
  rpc DeleteAccount(DeleteAccountRequest) returns (EmptyRequest) {}
  rpc GetAllCurrentUserAccounts(EmptyRequest) returns (AccountResponse) {}
  rpc GetAllUserAccountsById(GetAccountsByUserRequest) returns (AccountResponse) {}
  rpc CreditAccount(CreditAccountRequest) returns (AccountResponse) {}
  rpc DebitAccount(DebitAccountRequest) returns (AccountResponse) {}
  rpc SendMoney(SendMoneyRequest) returns (SendMoneyResponse) {}
}

message EmptyRequest {}

message Account {
  string label = 1;
  float balance = 2;
  string userId = 3;
}

message CreateAccountRequest {
  string label = 1;
  string userId = 2;
}

message GetAccountRequest {
  string label = 1;
}

message DeleteAccountRequest {
  Account accountToDelete = 1;
  Account accountToTransferFunds = 2;
}

message UpdateAccountRequest {
  Account account = 1;
}

message CreditAccountRequest {
  Account account = 1;
  float amount = 2;
}

message DebitAccountRequest {
  Account account = 1;
  float amount = 2;
}

message GetAccountsByUserRequest {
  string userId = 1;
}

message AccountResponse {
  repeated Account account = 1;
}

message SendMoneyRequest {
  Account fromAccount = 1;
  Account toAccount = 2;
  float amount = 3;
}

message SendMoneyResponse {
  Account fromAccount = 1;
  Account toAccount = 2;
  float amount = 3;
}

